# Humanoid_Robot_PB

./: .gitignore  CMakeLists.txt  PROTO_GENERATION_GUIDE.md  README.md  generate_proto.sh
cmake/: PBConfig.cmake.in  PB_CONFIG_UPDATE_REPORT.md
include/: pb_export.h
include/detection/: detection.grpc.pb.h  detection.pb.h
include/perception/: imgs.grpc.pb.h  imgs.pb.h
proto/common/: variant.proto
proto/communication/: communication_service.proto  rpc_service.proto  topic_service.proto
proto/detection/: detection.proto
proto/interfaces/: interfaces_callback.proto  interfaces_grpc.proto  interfaces_request_response.proto
proto/perception/: imgs.proto  perception_request_response.proto  perception_service.proto
source/detection/: detection.grpc.pb.cc  detection.pb.cc
source/perception/: imgs.grpc.pb.cc  imgs.pb.cc
tests/: CMakeLists.txt  COMMON_VARIANT_TEST_README.md  PB_TESTS_MIGRATION_REPORT.md  README.md  test_common_variant.cpp  test_detection_only  test_detection_only.cpp  test_interfaces.cpp  test_perception_only  test_perception_only.cpp
utils/: CMakeLists.txt
utils/include/: printUtil.h
utils/source/: printUtil.cpp
